# django-nublado-translation

./: .coverage  .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
django_nublado_translation/: conf.py  managers.py  models.py
src/django_nublado_translation/: apps.py  managers.py  models.py  utils.py
src/django_nublado_translation/conf/: app_settings.py
tests/: conftest.py  models.py  settings.py  test_app_settings.py  test_conf_app_settings.py  test_managers.py  test_models.py  test_utils.py
tests/support/: constants.py  settings.py
tests/test_project/: manage.py
tests/test_project/config/settings/: base.py  testing.py
