[project]
name = "django-nublado-translation"
version = "0.1"
dependencies = [
    "django",
    "django-nublado-core",
]
description = "A Django app for simple model-field translations."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">= 3.12"
authors = [
    {name = "Christopher Nublado", email = "nublado.dev@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0", 
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://www.example.com/"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-cov",
    "psycopg",
]

[tool.pytest.ini_options]
pythonpath = ["."]
