[project]
name = "django-nublado-translation"
version = "0.1.0"
description = "A Django app for simple model-field translations."
authors = [
    {name = "Foo Foo", email = "foo@foo.com"},
]
readme = "README.md"
license = "BSD-3-Clause"

requires-python = ">= 3.12"

dependencies = [
    "django",
    "django-nublado-core",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "psycopg",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["."]

addopts = [
    "--cov=django_nublado_core",
    "--cov-report=term-missing",
    # "--html=tests/reports/coverage/pytest.html",
]

